# lvglpy_android_setup

./: .gitignore  README.md  lvglpy_android_setup.py
lvglpy_build_help_files/: CMakeLists.txt  DroidbindInit.cmake  lv_conf.h
lvglpy_build_help_files/backends/: android_input_sw.cpp
